@@ -599,6 +599,7 @@ wxGTK:
 - Fix mouse wheel scrolling in wxListCtrl broken just before 3.0.0.
 - Fix memory leak in wxSocket.
 - Fix raw access to wxBitmap pixels after drawing on it using wxMemoryDC.
+- Fix setting font and colours of wxToggleButtons with images.
 
 wxMSW:
 
